fix: fix overflow problem

--- a/src/global.css
+++ b/src/global.css
@@ -55,3 +55,7 @@ img {
         transform: rotate(360deg);
     }
 }
+
+body {
+    overflow-x: hidden;
+}
